# dace

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  configure.sh  install.sh
core/: dacecompat.c  dacemath.c  dacenorm.c
core/include/dace/: config.h.in  dacebase.h
interfaces/cxx/: AlgebraicVector.cpp  CMakeLists.txt  DA.cpp  Interval.cpp  StatExtension.cpp
interfaces/cxx/include/dace/: AlgebraicMatrix.h  AlgebraicMatrix_t.h  AlgebraicVector.h  AlgebraicVector_t.h  DA.h  StatExtension.h  dace.h
interfaces/julia/: CMakeLists.txt  README.md  dace_julia.cxx
